# duvals_triangle_plotter

./: .gitignore  404.html  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  setup.py  sitemap.xml  test_duvals_triangle_plotter.py
.github/workflows/: deploy.yml
about/: index.html
api-reference/: index.html
changelog/: index.html
docs/: about.md  api-reference.md  changelog.md  duvals-triangle-explained.md  examples.md  faq.md  fault-regions.md  index.html  index.md  installation.md  license.md  quickstart.md  style.css
duvals-triangle-explained/: index.html
duvals_triangle_plotter/: __init__.py  __main__.py  constants.py  duvals_triangle_plotter.py
duvals_triangle_plotter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: index.html
faq/: index.html
fault-regions/: index.html
installation/: index.html
license/: index.html
overrides/: main.html
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
