[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duvals-triangle-plotter"
dynamic = ["version"]
description = "Duval's Triangle Plotter — Python library for generating Duval's Triangle plots for DGA"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    {name = "Subramanian Narayanan"},
]
keywords = [
    "duval",
    "duvals-triangle",
    "dga",
    "dissolved-gas-analysis",
    "transformer",
    "power-transformer",
    "fault-diagnosis",
    "ternary-plot",
    "plotly",
    "visualization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "plotly>=5.0",
]

[project.urls]
Homepage = "https://nagusubra.github.io/duvals_triangle_plotter/"
Documentation = "https://nagusubra.github.io/duvals_triangle_plotter/"
Repository = "https://github.com/nagusubra/duvals_triangle_plotter"
"Bug Tracker" = "https://github.com/nagusubra/duvals_triangle_plotter/issues"
"Changelog" = "https://github.com/nagusubra/duvals_triangle_plotter/blob/main/CHANGELOG.txt"

[project.scripts]
duvals-triangle-plotter = "duvals_triangle_plotter.__main__:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
duvals_triangle_plotter = ["*.py", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["test_duvals_triangle_plotter.py"]
